--- a/asciidocs-slides/index.adoc
+++ b/asciidocs-slides/index.adoc
@@ -1,33 +1,38 @@
-= Demo-Presentation1
-Thomas W. Stütz
-1.0, 2020-08-22
-ifndef::sourcedir[:sourcedir: ../src/main/java]
-ifndef::imagesdir[:imagesdir: images]
+= LeoSurvey
+ifndef::imagesdir[:imagesdir: ../images]
 ifndef::backend[:backend: html5]
 :icons: font
+:revealjs_parallaxBackgroundImage: ../images/background2.png
+:revealjs_parallaxBackgroundSize: cover
+:uri-config: https://github.com/asciidoctor/asciidoctor/blob/master/compat/asciidoc.conf
 
-== First Slide
+== Team
 
-* aaa
-* bbb
-* ccc [red]#red text#
+* Tischler Fabian (5AHIF)
 
-=== Second Slide
+* Trinkl Philip (5AHIF)
 
-[plantuml,cld,png]
-----
-@startuml
-class Person {
-brand: String
-type: String
-}
-@enduml
-----
+== Motivation
 
-== Third Slide
+* Umfragen an der Schule werden über verschiedene Plattformen
+durchgeführt (Strawpoll, ...)
 
-image:https://images.pexels.com/photos/3966425/pexels-photo-3966425.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940[VW]
+* diese Plattformen können mit den gesammelten Daten umgehen wie sie möchten
 
-== Fourth Slide
+== Ziel
 
-IMPORTANT: Something very important
+* ein Programm, welches schuleinheitlich als Umfragetool benutzt werden kann
+
+* dadurch können die Daten von der Schule selbst verwaltet werden
+
+== Technologien
+
+* Java (Backend)
+
+* Angular (Frontend)
+
+* Docker (Deployment)
+
+* Git (Version Control)
+
+== Live Demo
