--- a/asciidocs-slides/index.adoc
+++ b/asciidocs-slides/index.adoc
@@ -1,31 +1,46 @@
 = LeoSurvey
-ifndef::imagesdir[:imagesdir: ../images]
+ifndef::imagesdir[:imagesdir: /images]
 ifndef::backend[:backend: html5]
 :icons: font
-:revealjs_parallaxBackgroundImage: ../images/background2.png
 :revealjs_parallaxBackgroundSize: cover
 :uri-config: https://github.com/asciidoctor/asciidoctor/blob/master/compat/asciidoc.conf
 
+[transition="zoom", %notitle]
 == Team
 
 * Tischler Fabian (5AHIF)
 
 * Trinkl Philip (5AHIF)
 
+[transition="zoom", %notitle]
 == Motivation
+
+image::pexels-photo-590022.png[background, size=cover]
 
 * Umfragen an der Schule werden über verschiedene Plattformen
 durchgeführt (Strawpoll, ...)
 
 * diese Plattformen können mit den gesammelten Daten umgehen wie sie möchten
 
+[transition="zoom", %notitle]
 == Ziel
+
+image::pexels-photo-590022.png[background, size=cover]
 
 * ein Programm, welches schuleinheitlich als Umfragetool benutzt werden kann
 
 * dadurch können die Daten von der Schule selbst verwaltet werden
 
+[transition="zoom", %notitle]
+== UseCases
+
+image::pexels-photo-590022.png[background, size=cover]
+image::ucd.png[]
+
+[transition="zoom", %notitle]
 == Technologien
+
+image::pexels-photo-590022.png[background, size=cover]
 
 * Java (Backend)
 
@@ -35,4 +50,9 @@ durchgeführt (Strawpoll, ...)
 
 * Git (Version Control)
 
+[transition="zoom", %notitle]
 == Live Demo
+
+image::pexels-photo-590022.png[background, size=cover, background-opacity="0.3"]
+
+http://vm08.htl-leonding.ac.at:8080/[vm08.htl-leonding.ac.at]
