--- a/asciidocs-slides/index.adoc
+++ b/asciidocs-slides/index.adoc
@@ -1,5 +1,5 @@
 = LeoSurvey
-ifndef::imagesdir[:imagesdir: /images]
+ifndef::imagesdir[:imagesdir: ./images]
 ifndef::backend[:backend: html5]
 :icons: font
 :revealjs_parallaxBackgroundSize: cover
