--- a/asciidocs-slides/index.adoc
+++ b/asciidocs-slides/index.adoc
@@ -10,7 +10,7 @@ ifndef::backend[:backend: html5]
 
 * Tischler Fabian (5AHIF)
 
-* Trinkl Philip (5AHI)
+* Trinkl Philip (5AHIF)
 
 [transition="zoom", %notitle]
 == Motivation
